[gd_scene load_steps=10 format=3 uid="uid://c6wn7fyt5xfvx"]

[ext_resource type="Script" path="res://tests/scenes/loading_screen.gd" id="1_ppyw7"]

[sub_resource type="Gradient" id="Gradient_n5goy"]
colors = PackedColorArray(0.255659, 0.255659, 0.255659, 1, 0.724643, 0.724643, 0.724643, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_o4uvk"]
fractal_gain = 0.67
domain_warp_enabled = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xskot"]
color_ramp = SubResource("Gradient_n5goy")
noise = SubResource("FastNoiseLite_o4uvk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c635n"]
texture = SubResource("NoiseTexture2D_xskot")

[sub_resource type="Gradient" id="Gradient_t3s5y"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.440171, 0.487179, 0.619658, 0.666667)
colors = PackedColorArray(1, 1, 1, 0, 0.0214346, 0.0214346, 0.0214346, 1, 0.25, 0.25, 0.25, 1, 0.0214346, 0.0214346, 0.0214346, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ljwqc"]
gradient = SubResource("Gradient_t3s5y")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_p5bho"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.440171, 0.487179, 0.619658, 0.666667)
colors = PackedColorArray(1, 1, 1, 0, 0.0214346, 0.0214346, 0.0214346, 1, 0.101961, 0, 0.709804, 1, 0.0214346, 0.0214346, 0.0214346, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p2cus"]
gradient = SubResource("Gradient_p5bho")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ppyw7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_c635n")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ProgressBar" type="TextureProgressBar" parent="PanelContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
fill_mode = 4
texture_under = SubResource("GradientTexture2D_ljwqc")
texture_progress = SubResource("GradientTexture2D_p2cus")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = -2
alignment = 1

[node name="LabelLoadingText" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 30
text = "Loading..."
horizontal_alignment = 1

[node name="LabelProgressValue" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "100%"
horizontal_alignment = 1

[node name="TimerLoadingTextChanger" type="Timer" parent="."]

[connection signal="timeout" from="TimerLoadingTextChanger" to="." method="_on_timer_loading_text_changer_timeout"]
